[APPBUG-4852] Mobile Web: Extra White Space on Department Pages Due to Media - Fixed browse media
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@61514 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/mobileweb/mobileweb_common.css
+++ b/projects/Media/docroot/assets/css/mobileweb/mobileweb_common.css
@@ -1941,3 +1941,6 @@ footer .copyright {
 	.social_login_jsp.mm-page #sulCont .social-login-or-separator{
 		padding: 0 10px;
 	}
+	.mm-page .browse-media img{
+ 		max-width: 100%;
+	}
